# google-hashcode-2021

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  setup.cfg
hashcode/: __init__.py  __main__.py  loggers.py
hashcode/common/: __init__.py  base.py  core.py  model.py
hashcode/solutions/: __init__.py  all_1_sec.py  all_2_sec.py  naive.py  unused_streets_1_sec.py  unused_streets_2_sec.py  weight_by_traffic.py  weighted_by_most_promising.py  weighted_scheduling.py  zero.py
scripts/: dataset_summary.py  run.sh  scorer  summary.sh  whitelist.py  zipper.sh
