[metadata]
name = hashcode
version = attr: hashcode.__version__
description = Package for Google HashCode.
long_description = file: README.md, LICENSE
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    License :: OSI Approved :: MIT Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
author = "Simone Conia, Roberto Dessì, Marco Favorito, Francesco Fuggitti",
author_email = "simone.conia@gmail.com, marco.favorito@gmail.com, francesco.fuggitti@gmail.com",

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    numpy
    pandas

[options.entry_points]
console_scripts =
    hashcode = hashcode.__main__:main

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[flake8]
ignore = W503
exclude =
    .tox,
    .git,
    __pycache__,
    build,
    dist,
    tests/fixtures/*,
    *.md,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    src/python-project-template/__init__.py,
    scripts/whitelist.py
max-complexity = 10
max-line-length = 120

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[black]
exclude = "scripts/whitelist.py


[mypy]
python_version = 3.7
strict_optional = True

# Per-module options:

[mypy-numpy]
ignore_missing_imports = True

# Per-module options for tests dir:

[mypy-pytest]
ignore_missing_imports = True

# Per-script options
[mypy-scripts/whitelist]
ignore_errors = True
